<resources>
    <string name="app_name" translatable="false">Workout Checker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="arms">Arms</string>
    <string name="shoulders">Shoulders</string>
    <string name="back">Back</string>
    <string name="pectorals">Pectorals</string>
    <string name="abs">Abs</string>
    <string name="legs">Legs</string>
    <string name="seances">Seances</string>
    <string name="progress">Progress</string>
    <string name="nutrition">Nutrition</string>
    <string name="seanceModel">Seance Model</string>
    <string name="seanceName">Seance name:</string>
    <string name="seanceDate">Seance date: </string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="reps">Reps:</string>
    <string name="weight">Weight:</string>
    <string name="chooseExercice">Pick exercice</string>
    <string name="exercice">Exercise</string>
    <string name="description">Description</string>
    <string name="principalMuscles">Principal muscles:</string>
    <string name="secondaryMuscles">Secondary Muscles:</string>
    <string name="product">Product: </string>
    <string name="calories">Calories: </string>
    <string name="proteins">Proteins: </string>
    <string name="carbs">Carbohydrates: </string>
    <string name="exercices"> exercises</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="foodDate">Day: </string>
    <string name="fat">Fat: </string>
    <string name="satured">Saturated: </string>
    <string name="daily">Daily: </string>
    <string name="prots">Proteins</string>
    <string name="cals">Energy</string>
    <string name="carbss">Carbohydrates</string>
    <string name="fats">Fat</string>
</resources>