<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercicePicker">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="all"
            android:text="@string/all" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/bras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="bras"
            android:text="@string/arms" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/epaules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="epaules"
            android:text="@string/shoulders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="dos"
            android:text="@string/back" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/pectoraux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="pectoraux"
            android:text="@string/pectorals" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/abdos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="abdos"
            android:text="@string/abs" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/jambes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="jambes"
            android:text="@string/legs" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>